[package]
name = "spdk-rs"
version = "0.1.0"
authors = ["Wangweizhen <hawking.rei@gmail.com>"]
license = "MIT/Apache-2.0"
description = """
Async programming with spdk for rust.
"""
edition = '2018'

[dependencies]
failure = "= 0.1.2"
futures-preview = "= 0.3.0-alpha.12"
libc = "= 0.2.48"

[dev-dependencies]
spectral = "= 0.6.0"
slog-term = "=2.0.2"

[workspace]
members = [
  "spdk-sys",
  "example/nvme/hello_world",

]
default-members = [
  "spdk-sys",
  "example/nvme/hello_world",
]
